[package]
name = "hub-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota = "0.2.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"